--- a/packages/sample-app/package.json
+++ b/packages/sample-app/package.json
@@ -2,6 +2,7 @@
     "name": "sample-app",
     "description": "Sample LWC Wire Adapter Application",
     "version": "0.0.1",
+    "private": true,
     "author": "Philippe Riand",
     "bugs": "https://github.com/LWC-Essentials/wire-adapters/issues",
     "dependencies": {
@@ -52,7 +53,7 @@
     "keywords": [
         "lwc"
     ],
-    "license": "MIT",
+    "license": "BSD 3-Clause",
     "lint-staged": {
         "**/*.{css,html,js,json,md,ts,yaml,yml}": [
             "prettier --write"
