Added tests, make fetch return a promise and fixed race condition

--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "pack": "yarn build && yarn pack",
     "build-publish": "yarn build && yarn pack && yarn publish --access public",
-    "clean": "rm ./*.tgz"
+    "clean": "rm ./*.tgz",
+    "test": "jest"
   },
   "files": [
     "dist/",
