--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start:lwc": "lerna run start --scope sample-app --stream",
     "start:lwc:watch": "lerna run start:watch --scope sample-app --stream",
     "stop:lwc": "lerna run stop --scope sample-app --stream",
-    "update-license-headers": "node ./scripts/license-header.js"
+    "update-license-headers": "node ./scripts/license-header.js",
+    "test": "jest"
   },
   "workspaces": {
     "packages": [
@@ -36,6 +37,8 @@
     "@lwc/wire-service": "^1.1.13"
   },
   "devDependencies": {
+    "jest": "^25.1.0",
+    "lerna": "^3.17.0",
     "rollup": "^1.7.4",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-compat": "^0.22.0",
@@ -44,7 +47,6 @@
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript": "^1.0.0",
     "tslib": "^1.10.0",
-    "typescript": "~3.6.2",
-    "lerna": "^3.17.0"
+    "typescript": "~3.6.2"
   }
 }
