--- a/packages/sample-app/package.json
+++ b/packages/sample-app/package.json
@@ -15,13 +15,15 @@
         "useragent": "~2.3.0"
     },
     "devDependencies": {
-        "@lwc/compiler": "1.1.13",
-        "@lwc/engine": "1.1.13",
-        "@lwc/features": "1.1.13",
+        "@lwc/compiler": "^1.6.0",
+        "@lwc/engine": "^1.6.0",
+        "@lwc/wire-service": "^1.6.0",
+        "@lwc/features": "^1.6.0",
         "@lwc/jest-preset": "2.2.0",
-        "@lwc/rollup-plugin": "1.1.13",
-        "@lwc/synthetic-shadow": "^1.1.13",
-        "@lwc/wire-service": "^1.1.13",
+        "@lwc/rollup-plugin": "^1.6.0",
+        "@lwc/synthetic-shadow": "^1.6.0",
+        "@lwce/fetch": "^0.0.3",
+        "@lwce/store": "^0.0.3",
         "@salesforce/eslint-config-lwc": "~0.3.0",
         "@wdio/cli": "~5.9.3",
         "@wdio/local-runner": "~5.9.3",
@@ -35,8 +37,6 @@
         "eslint": "^5.10.0",
         "jest": "~24.8.0",
         "lint-staged": "^9.4",
-        "@lwce/fetch": "0.0.2",
-        "@lwce/store": "0.0.1",
         "npm-run-all": "^4.1.5",
         "rollup": "^1.26.0",
         "rollup-plugin-compat": "0.21.5",
