--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lwce/store",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "LWC global store",
   "license": "BSD-3-Clause",
   "author": "Philippe Riand",
@@ -8,7 +8,7 @@
   "main": "dist/es6/index.js",
   "typings": "dist/types/index.d.ts",
   "scripts": {
-    "build": "tsc && cp src/index.js dist/es6 && cp src/store/initstore.js dist/es6/store",
+    "build": "tsc && cp src/index.js dist/es6 && cp src/store/initstore.js dist/es6/store && cp src/store/StoreComponent.html dist/es6/store",
     "pack": "yarn build && yarn pack",
     "build-publish": "yarn build && yarn pack && yarn publish --access public",
     "clean": "rm ./*.tgz"
@@ -19,8 +19,8 @@
   ],
   "devDependencies": {
     "copy": "^0.3.2",
-    "@lwc/engine": "^1.1.13",
-    "@lwc/wire-service": "^1.1.13"
+    "@lwc/engine": "^1.6.0",
+    "@lwc/wire-service": "^1.6.0"
   },
   "dependencies": {
   },
