--- a/package.json
+++ b/package.json
@@ -28,21 +28,30 @@
       "packages/sample-app"
     ]
   },
-  "engines": {
-    "yarn": ">=1.10.1",
-    "node": ">=10.6.0"
-  },
   "devDependencies": {
-    "jest": "^25.1.0",
-    "lerna": "^3.17.0",
-    "rollup": "^1.7.4",
+    "@lwc/compiler": "^2.35.1",
+    "@lwc/engine-dom": "^2.35.1",
+    "@lwc/jest-preset": "11.7.0",
+    "@lwc/rollup-plugin": "^2.35.1",
+    "@lwc/wire-service": "^2.35.1",
+    "@salesforce/eslint-config-lwc": "~3.3.3",
+    "@types/jest": "^29.2.5",
+    "eslint": "^8.31.0",
+    "jest": "^29.3.1",
+    "lerna": "^6.4.0",
+    "rollup": "^3.9.1",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-compat": "^0.22.0",
-    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript": "^1.0.0",
-    "tslib": "^1.10.0",
-    "typescript": "~3.6.2"
+    "ts-jest": "^29.0.3",
+    "typescript": "~4.9.4"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.4.1",
+    "yarn": ">=1.10.1"
   }
 }
