--- a/packages/sample-app/package.json
+++ b/packages/sample-app/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sample-app",
     "description": "Sample LWC Wire Adapter Application",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "private": true,
     "license": "BSD-3-Clause",
     "author": "Philippe Riand",
@@ -15,40 +15,18 @@
         "useragent": "~2.3.0"
     },
     "devDependencies": {
-        "@lwc/compiler": "^1.6.0",
-        "@lwc/engine": "^1.6.0",
-        "@lwc/wire-service": "^1.6.0",
-        "@lwc/features": "^1.6.0",
-        "@lwc/jest-preset": "2.2.0",
-        "@lwc/rollup-plugin": "^1.6.0",
-        "@lwc/synthetic-shadow": "^1.6.0",
-        "@lwce/fetch": "^0.0.3",
-        "@lwce/store": "^0.0.3",
-        "@salesforce/eslint-config-lwc": "~0.3.0",
+        "@lwce/fetch": "^0.1.0",
+        "@lwce/store": "^0.1.0",
         "@wdio/cli": "~5.9.3",
         "@wdio/local-runner": "~5.9.3",
         "@wdio/mocha-framework": "~5.9.3",
         "@wdio/selenium-standalone-service": "~5.9.3",
         "@wdio/spec-reporter": "~5.9.3",
         "@wdio/sync": "~5.9.3",
-        "babel-eslint": "^10.0.1",
         "concurrently": "~4.0.1",
         "cross-env": "^6.0.3",
-        "eslint": "^5.10.0",
-        "jest": "~24.8.0",
         "lint-staged": "^9.4",
-        "npm-run-all": "^4.1.5",
-        "rollup": "^1.26.0",
-        "rollup-plugin-compat": "0.21.5",
-        "rollup-plugin-copy": "^3.1.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-replace": "~2.1.0",
-        "rollup-plugin-terser": "^5.1.2"
-    },
-    "engines": {
-        "node": ">=10.13.0",
-        "npm": ">=6.4.1",
-        "yarn": ">=1.9.4"
+        "npm-run-all": "^4.1.5"
     },
     "homepage": "https://github.com/LWC-Essentials/wire-adapters",
     "keywords": [
